# HMD

./: .gitignore  Cargo.toml  README.md
src/: consts.rs  lib.rs  markdown.rs  utils.rs
src/markdown/: blockquote.rs  code_fence.rs  escape.rs  icon.rs  inline.rs  line.rs  list.rs  paragraph.rs  predicates.rs  syntax_highlighter.rs  table.rs
src/markdown/icon/: data.py  render.rs  template.rs
src/markdown/inline/: decoration.rs  link.rs  tag.rs
